feat: add classNames to notice and notice list

--- a/design-toolkit/components/src/components/notice/list.docs.mdx
+++ b/design-toolkit/components/src/components/notice/list.docs.mdx
@@ -105,6 +105,14 @@ The Notice.List component accepts all standard HTML div attributes
 * **`defaultTimeout`** - Default timeout duration in milliseconds
 * **`hideClearAll`** - Whether to hide the "Clear All" button: `boolean`
 * **`size`** - Default size for notices: `'medium'` (default) | `'small'`
+- **`classNames`** - Optional class names for custom styling
+  - `region` -  Class names applied to the region element
+  - `list` -  Class names applied to the `ToastList` element
+  - `button` -  Class names applied to the Clear All button
+  - `notice` -  Class names applied to each `Notice`
+    - `notice` - Class name applied to the container element
+    - `content` - Class name applied to the content container
+    - `actions` - Class name applied to the actions container
 
 ## Queue Management
 
