--- a/design-toolkit/components/src/components/notice/notice.docs.mdx
+++ b/design-toolkit/components/src/components/notice/notice.docs.mdx
@@ -70,6 +70,10 @@ The Notice component accepts all standard HTML div attributes
 * **`secondary`** - Secondary action button configuration (same properties as primary)
 * **`showClose`** - Whether to display close button: `boolean`
 * **`shouldCloseOnAction`** - Whether notice should close when action buttons are pressed: `boolean`
+- **`classNames`** - Optional class names for custom styling
+  - `notice` - Class name applied to the container element
+  - `content` - Class name applied to the content container
+  - `actions` - Class name applied to the actions container
 
 ## Event System
 
