feat: add prop to hide icon

--- a/design-toolkit/components/src/components/notice/notice.docs.mdx
+++ b/design-toolkit/components/src/components/notice/notice.docs.mdx
@@ -68,6 +68,7 @@ The Notice component accepts all standard HTML div attributes
   * `size` - Button size variant
   * `variant` - Button style variant
 * **`secondary`** - Secondary action button configuration (same properties as primary)
+* **`hideIcon`** - Whether to hide the icon: `boolean`
 * **`showClose`** - Whether to display close button: `boolean`
 * **`shouldCloseOnAction`** - Whether notice should close when action buttons are pressed: `boolean`
 - **`classNames`** - Optional class names for custom styling
