feat: PR feedback

--- a/design-toolkit/components/src/components/notice/notice.docs.mdx
+++ b/design-toolkit/components/src/components/notice/notice.docs.mdx
@@ -70,33 +70,41 @@ The Notice component accepts all standard HTML div attributes
 * **`secondary`** - Secondary action button configuration (same properties as primary)
 * **`hideIcon`** - Whether to hide the icon: `boolean`
 * **`showClose`** - Whether to display close button: `boolean`
+* **`onPrimaryAction`** - Callback called when the primary button is pressed: `() => void`
+* **`onSecondaryAction`** - Callback called when the secondary button is pressed: `() => void`
+* **`onClose`** - Callback called when the close button is pressed: `() => void`
 * **`shouldCloseOnAction`** - Whether notice should close when action buttons are pressed: `boolean`
 - **`classNames`** - Optional class names for custom styling
   - `notice` - Class name applied to the container element
   - `content` - Class name applied to the content container
+  - `message` - Class name applied to the notice message
   - `actions` - Class name applied to the actions container
 
-## Event System
-
-The Notice component uses an event-driven architecture for user interactions:
-
-### Button Events
+### Button Callbacks
 ```tsx
-import { useOn } from '@accelint/bus/react';
-import { NoticeEventTypes } from './events';
+<Notice
+  id="39f174fc-ead3-46f4-9131-239ac2a7ed27"
+  message="Are you sure you want to delete this item?"
+  primary={{ children: "Delete" }}
+  secondary={{ children: "Cancel" }}
+  shouldCloseOnAction={true}
+  onPrimaryAction={() => {
+    console.log('Primary action: Delete was pressed')
+  }}
+  onSecondaryAction={() => {
+    console.log('Secondary action: Cancel was pressed')
+  }}
+/>
+```
 
-// Listen for button press events
-useOn(NoticeEventTypes.primaryOnPress, (data) => {
-  console.log(`Primary button pressed on notice ${data.payload.id}`);
-});
-
-useOn(NoticeEventTypes.secondaryOnPress, (data) => {
-  console.log(`Secondary button pressed on notice ${data.payload.id}`);
-});
-
-useOn(NoticeEventTypes.close, (data) => {
-  console.log(`Close button pressed on notice ${data.payload.id}`);
-});
+```tsx
+<Notice
+  id="39f174fc-ead3-46f4-9131-239ac2a7ed27"
+  message="Item was saved successfully"
+  onClose={() => {
+    console.log('Close was pressed')
+  }}
+/>
 ```
 
 ## Implementation Notes
