--- a/design-toolkit/components/src/components/notice/list.docs.mdx
+++ b/design-toolkit/components/src/components/notice/list.docs.mdx
@@ -30,6 +30,7 @@ function App() {
     <div ref={noticeContainer}>
       <Notice.List
         parentRef={noticeContainer}
+        aria-label='notice-list'
         placement="top right"
         defaultColor="info"
         limit={3}
@@ -51,6 +52,7 @@ const errorListId = "error-notices";
 <div ref={containerRef}>
   <Notice.List
     id={infoListId}
+    aria-label='info-notices'
     parentRef={containerRef}
     placement="top right"
     defaultColor="info"
@@ -58,6 +60,7 @@ const errorListId = "error-notices";
   />
   <Notice.List
     id={errorListId}
+    aria-label='error-notices'
     parentRef={containerRef}
     placement="bottom right"
     defaultColor="critical"
@@ -113,6 +116,16 @@ The Notice.List component accepts all standard HTML div attributes
     - `notice` - Class name applied to the container element
     - `content` - Class name applied to the content container
     - `actions` - Class name applied to the actions container
+
+## Events
+The Notice.List implements events via bus
+
+### Events
+* **`queue`** - Add an event to the queue
+* **`dequeue`** - Remove an event from the queue
+* **`actionPrimary`** - Primary button was pressed
+* **`actionSecondary`** - Secondary button was pressed
+* **`close`** - Close button was pressed
 
 ## Queue Management
 
