feat: update notice docs

--- a/design-toolkit/components/src/components/notice/list.docs.mdx
+++ b/design-toolkit/components/src/components/notice/list.docs.mdx
@@ -42,6 +42,7 @@ function App() {
 <Canvas of={ListStories.Default} />
 
 ### Multiple Notice Lists
+When you have multiple Notice.List on the page add a unique `aria-label` to each list
 ```tsx
 // Create separate lists for different types of notifications
 const infoListId = "info-notices";
