feat: update docs regarding size

--- a/design-toolkit/components/src/components/notice/notice.docs.mdx
+++ b/design-toolkit/components/src/components/notice/notice.docs.mdx
@@ -59,7 +59,7 @@ The Notice component provides message notification functionality for displaying 
 * **critical** - Red styling for critical errors or alerts
 
 ## Sizes
-
+The min/max width for a notice will only be applied in a list with `placement`. This allows the notice to fill the container when it is used inline.
 * **medium** - Standard size with larger text and padding (default)
 * **small** - Compact size with smaller text and padding for space-constrained layouts
 
