chore: add missing dockblock comments

--- a/design-toolkit/components/src/components/view-stack/view-stack.docs.mdx
+++ b/design-toolkit/components/src/components/view-stack/view-stack.docs.mdx
@@ -17,7 +17,8 @@ It is composed of the following components:
 The ViewStack has no inherent sense of style or layout. It simply displays the current view, if there is one. There's a limit of a single active view per stack, but stacks can also be nested to create more complex combinations of views.
 
 ## Example usage
-```
+
+```tsx
 const ids = {
   stack: uuid(),
   a: uuid(),
