--- a/packages/map-toolkit/src/map-mode/map-mode.docs.mdx
+++ b/packages/map-toolkit/src/map-mode/map-mode.docs.mdx
@@ -1,4 +1,4 @@
-import { Canvas, Meta } from '@storybook/blocks';
+import { Meta } from '@storybook/blocks';
 
 import * as MapModeStories from './map-mode.stories';
 
